[tool.poetry]
name = "mariapolis-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
